--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>百渣讲坛高层专属platform</title>
+    <title>Klay的论坛社区</title>
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
@@ -14,16 +14,16 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">一期项目讨论</span>
+                <span class="sr-only">克莱的箱子</span>
             </button>
-            <a class="navbar-brand" href="#">一期项目讨论</a>
+            <a class="navbar-brand" href="#">克莱的箱子</a>
         </div>
 
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <form class="navbar-form navbar-left">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="今天的问题有哪些？">
+                    <input type="text" class="form-control" placeholder="今天有哪些问题？">
                 </div>
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
