--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -45,44 +45,51 @@
         </div>
     </div>
 </nav>
-    <div class="container-fluid main">
-        <div class="row">
-            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-                <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>发起</h2>
-                <form action="">
-                    <div class="form-group">
-                        <label for="title">标题</label>
-                        <input type="text" class="form-control" id="title" placeholder="请描述...">
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>发起</h2>
+            <hr>
+            <form action="/publish" method="post">
+                <div class="form-group">
+                    <label for="title">标题:</label>
+                    <input type="text" class="form-control" th:if="${title == null}" th:text="${title}" id="title" name="title" placeholder="请描述...">
+                </div>
+                <div class="form-group">
+                    <label for="description">问题补充(必填，请参照右侧提示):</label>
+                    <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30" rows="10"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="tag">添加标签:</label>
+                    <input type="text" class="form-control" th:if="${tag == null}" th:text="${tag}" id="tag" name="tag" placeholder="输入标签">
+                </div>
+
+                <div class="container-fluid main">
+                    <div class="row">
+                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:if="${Error != null}" th:text="${Error}"></div>
+                            <button type="submit" class="btn btn-success btn-publish">确认发起</button>
                     </div>
-                    <div class="form-group">
-                        <label for="title">问题补充(必填，请参照右侧提示)</label>
-                        <textarea name="description" id="description" class="form-control" cols="30" rows="10"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="title">添加标签</label>
-                        <input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签">
-                    </div>
-                    <button type="button" class="btn btn-success btn-publish">确认发起</button>
-                </form>
-            </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-                <h3>问题发起指南</h3>
-                · 问题标题：请用精简的语言描述您发布的问题，不超过25个字<br>
+                </div>
+            </form>
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <h3>问题发起指南</h3>
+            · 问题标题：请用精简的语言描述您发布的问题，不超过25个字<br>
 
-                · 问题补充：详细补充您的问题内容，并确保问题描述清晰直观，并提供一些相关资料<br>
+            · 问题补充：详细补充您的问题内容，并确保问题描述清晰直观，并提供一些相关资料<br>
 
-                服务器运行环境信息；<br>
-                软件版本；<br>
-                问题发生的上下文信息；<br>
-                可以完整复现问题的代码(如可直接运行于 Kibana Console 的复现流程)；<br>
-                补充完整的异常和错误信息；<br>
-                注意阅读格式友好，代码和异常信息请用代码标签格式化张贴；<br>
+            服务器运行环境信息；<br>
+            软件版本；<br>
+            问题发生的上下文信息；<br>
+            可以完整复现问题的代码(如可直接运行于 Kibana Console 的复现流程)；<br>
+            补充完整的异常和错误信息；<br>
+            注意阅读格式友好，代码和异常信息请用代码标签格式化张贴；<br>
 
-                · 选择标签：选择一个或多个合适的标签，用逗号隔开，不超过10个字<br>
+            · 选择标签：选择一个或多个合适的标签，用逗号隔开，不超过10个字<br>
 
-                · 关于积分：发起一个问题会消耗您20个积分，每多一个回复您将获得5个积分，为了您的利益，在发起问题的时候希望能更好的描述您的问题以及多使用站内搜索功能<br>
-            </div>
+            · 关于积分：发起一个问题会消耗您20个积分，每多一个回复您将获得5个积分，为了您的利益，在发起问题的时候希望能更好的描述您的问题以及多使用站内搜索功能<br>
         </div>
     </div>
+</div>
 </body>
 </html>
