--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/community.css">
     <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
@@ -16,7 +17,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">克莱的箱子</span>
             </button>
-            <a class="navbar-brand" href="#">克莱的箱子</a>
+            <a class="navbar-brand" href="/">克莱的箱子</a>
         </div>
 
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -47,5 +48,30 @@
         </div>
     </div>
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现 </h2>
+            <hr>
+            <ul class="media-list">
+                <li class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded" src="https://avatars2.githubusercontent.com/u/48005191?v=4" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">突发！</h4>
+                        今天 华软科技(002954) 下午开盘涨停了！
+                        <span class="desc-text">2个回复 · 31次浏览 · 1小时前</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <h3>热门话题</h3>
+           </div>
+    </div>
+</div>
 </body>
 </html>
