--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -53,7 +53,7 @@
             <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">标题:</label>
-                    <input type="text" class="form-control" th:if="${title == null}" th:text="${title}" id="title" name="title" placeholder="请描述...">
+                    <input type="text" class="form-control"  th:value="${title}" id="title" name="title" placeholder="请描述...">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充(必填，请参照右侧提示):</label>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签:</label>
-                    <input type="text" class="form-control" th:if="${tag == null}" th:text="${tag}" id="tag" name="tag" placeholder="输入标签">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签">
                 </div>
 
                 <div class="container-fluid main">
