--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,20 +53,24 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现 </h2>
             <hr>
-            <ul class="media-list">
-                <li class="media">
+                <div class="media" th:each="question : ${questions}">
                     <div class="media-left">
                         <a href="#">
-                            <img class="media-object img-rounded" src="https://avatars2.githubusercontent.com/u/48005191?v=4" alt="">
+                            <img class="media-object img-rounded"
+                                 th:src="@{questionList.user.avatar_url}">
                         </a>
                     </div>
                     <div class="media-body">
-                        <h4 class="media-heading">突发！</h4>
-                        今天 华软科技(002954) 下午开盘涨停了！
-                        <span class="desc-text">2个回复 · 31次浏览 · 1小时前</span>
+                        <h4 class="media-heading" th:text="${question.title}"></h4>
+                        <span th:text="${question.description}"></span><br>
+                        <span class="desc-text"><span th:text="${question.comment_count}"></span>个回复 ·
+                            <span th:text="${question.view_count}"></span>次浏览 ·
+                            <span th:text="${question.follow_count}"></span>个关注 ·
+                            <span th:text="${#dates.format(question.gmt_create,'yyyy MM dd HH : mm')}"></span>
+                        </span>
                     </div>
-                </li>
-            </ul>
+                </div>
+        </div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>热门话题</h3>
