--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
             <a class="navbar-brand" href="/">克莱的箱子</a>
         </div>
 
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <form class="navbar-form navbar-left">
                 <div class="form-group">
@@ -53,28 +53,46 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现 </h2>
             <hr>
-                <div class="media" th:each="question : ${questions}">
-                    <div class="media-left">
-                        <a href="#">
-                            <img class="media-object img-rounded"
-                                 th:src="@{questionList.user.avatar_url}">
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <h4 class="media-heading" th:text="${question.title}"></h4>
-                        <span th:text="${question.description}"></span><br>
-                        <span class="desc-text"><span th:text="${question.comment_count}"></span>个回复 ·
+            <div class="media" th:each="question : ${pageination.questions}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object img-rounded"
+                             th:src="${question.user.avatar_url}">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading" th:text="${question.title}"></h4>
+                    <span th:text="${question.description}"></span><br>
+                    <span class="desc-text"><span th:text="${question.comment_count}"></span>个回复 ·
                             <span th:text="${question.view_count}"></span>次浏览 ·
                             <span th:text="${question.follow_count}"></span>个关注 ·
-                            <span th:text="${#dates.format(question.gmt_create,'yyyy MM dd HH : mm')}"></span>
+                            <span th:text="${#dates.format(question.gmt_create,'yyyy-MM-dd HH:mm:ss')}"></span>
                         </span>
-                    </div>
                 </div>
-        </div>
+            </div>
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li>
+                        <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li>
+                        <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>热门话题</h3>
-           </div>
+        </div>
     </div>
 </div>
 </body>
