--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,12 +35,12 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pageination.hasFirstPage}">
-                        <a href="/?page=1" aria-label="toFirstPage">
+                        <a href="/?page=1" aria-label="to_First_Page">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                     <li th:if="${pageination.hasPreviousPages}">
-                        <a th:href="@{/(page=${pageination.page - 1})}" aria-label="toPreviousPage">
+                        <a th:href="@{/(page=${pageination.page - 1})}" aria-label="to_Previous_Page">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
@@ -48,12 +48,12 @@
                         <a th:href="@{/(page=${page})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pageination.hasNextPage}">
-                        <a th:href="@{/(page=${pageination.page + 1})}" aria-label="toNextPage">
+                        <a th:href="@{/(page=${pageination.page + 1})}" aria-label="to_Next_Page">
                         <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${pageination.hasEndPage}" >
-                        <a th:href="@{/(page=${pageination.currentPage})}" aria-label="toLastPage">
+                        <a th:href="@{/(page=${pageination.currentPage})}" aria-label="to_Last_Page">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
