--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Klay的论坛社区</title>
+    <title th:text="${sectionName}"></title>
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/community.css">
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/community.css">
+    <script src="/bootstrap-3.3.7-dist/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
-<div class="container-fluid main">
+<div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现 </h2>
+            <h2><span th:text="${sectionName}"></span></h2>
             <hr>
             <div class="media" th:each="question : ${pagination.questions}">
                 <div class="media-left">
@@ -35,33 +35,38 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pagination.hasFirstPage}">
-                        <a href="/?page=1" aria-label="to_First_Page">
+                        <a th:href="@{'profile'+${section}(page=${1})}" aria-label="to_First_Page">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.hasPreviousPages}">
-                        <a th:href="@{/(page=${pagination.page - 1})}" aria-label="to_Previous_Page">
+                        <a th:href="@{'/profile/'+${section}(page=${pagination.page - 1})}" aria-label="to_Previous_Page">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
                     <li th:each="page : ${pagination.pages}" th:class="${pagination.page == page}?'active' : ''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                        <a th:href="@{'/profile/'+${section}(page=${page})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pagination.hasNextPage}">
-                        <a th:href="@{/(page=${pagination.page + 1})}" aria-label="to_Next_Page">
-                        <span aria-hidden="true">&gt;</span>
+                        <a th:href="@{'/profile/'+${section}(page=${pagination.page + 1})}" aria-label="to_Next_Page">
+                            <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.hasEndPage}" >
-                        <a th:href="@{/(page=${pagination.currentPage})}" aria-label="to_Last_Page">
+                        <a th:href="@{'/profile/'+${section}(page=${pagination.currentPage})}" aria-label="to_Last_Page">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
                 </ul>
             </nav>
+
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
+            <div class="list-group section">
+                <a href="/profile/questions"  th:class="${section == 'questions'}?'list-group-item active' : 'list-group-item'">我的提问</a>
+                <a href="/profile/replies" th:class="${section == 'replies'}?'list-group-item active' : 'list-group-item'">最新回复
+                    <span class="badge">14</span></a>
+            </div>
         </div>
     </div>
 </div>
