--- a/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
+++ b/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
@@ -13,8 +13,8 @@ body{
     margin-bottom: 15px;
 }
 .media-object{
-    width: 60px;
-    height: 60px;
+    width: 38px;
+    height: 38px;
 }
 .desc-text{
     font-size: 12px;
@@ -25,6 +25,7 @@ body{
     margin-top: 25px;
 }
 .community-menu{
-   color: #999;
-    font-size: px;
+    color: #999;
+    font-size: 13px;
+    margin-bottom: 15px;
 }
