--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -19,10 +19,10 @@
                 发布时间：<span th:text="${#dates.format(question.gmt_create,'yyyy-MM-dd HH:mm:ss')}"></span> |
                 阅读数：<span th:text="${question.view_count}"></span>
             </span>
-        <hr>
+        <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
         <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <a th:href="@{'/publish'+${question.id}}" class="community-menu">
+        <a th:href="@{'/publish/'+${question.id}}" class="community-menu" th:if="${session.user != null && session.user.id == question.creator}">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             编辑
         </a>
