编辑功能实现

--- a/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
+++ b/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
@@ -6,7 +6,7 @@ body{
     margin: 35px;
 }
 .head{
-    background-color: #dbeff9;
+    background-color: #def2fc;
 }
 .btn-publish{
     float: right;
