generator重构完成，已调试

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,10 +27,10 @@
                             <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
                         </h4>
                         <span th:text="${question.description}"></span><br>
-                        <span class="desc-text"><span th:text="${question.comment_count}"></span>个回复 ·
-                                <span th:text="${question.view_count}"></span>次浏览 ·
-                                <span th:text="${question.follow_count}"></span>个关注 ·
-                                <span th:text="${#dates.format(question.gmt_create,'yyyy-MM-dd HH:mm:ss')}"></span>
+                        <span class="desc-text"><span th:text="${question.commentCount}"></span>个回复 ·
+                                <span th:text="${question.viewCount}"></span>次浏览 ·
+                                <span th:text="${question.followCount}"></span>个关注 ·
+                                <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span>
                             </span>
                     </div>
             </div>
