--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -16,8 +16,8 @@
             <h4><span th:text="${question.title}"></span></h4>
             <span class="text-desc">
                 作者：<span th:text="${question.user.name}"></span> |
-                发布时间：<span th:text="${#dates.format(question.gmt_create,'yyyy-MM-dd HH:mm:ss')}"></span> |
-                阅读数：<span th:text="${question.view_count}"></span>
+                发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span> |
+                阅读数：<span th:text="${question.viewCount}"></span>
             </span>
         <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
