封装页面路由及系统错误

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <span th:text="${question.getDescriptions}"></span><br>
+                    <span th:text="${question.description}"></span><br>
                     <span class="desc-text"><span th:text="${question.commentCount}"></span>个回复 ·
                             <span th:text="${question.viewCount}"></span>次浏览 ·
                             <span th:text="${question.followCount}"></span>个关注 ·
