ajax测试评论插入

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${sectionName}"></title>
-    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/bootstrap-3.3.7-dist/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/community.css">
