--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>发布 - Klay的论坛社区</title>
-    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/bootstrap-3.3.7-dist/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/community.css">
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
