未登录评论后重新请求页面完成

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -45,8 +45,7 @@
                         </h5>
                     </div>
                 </div>
-                <input type="hidden" id="question_id" value="30">
-<!--                <input type="hidden" id="question_id" th:value="${question.id}">-->
+                <input type="hidden" id="question_id" th:value="${question.id}">
                 <textarea class="form-control comment" rows="8" id="comment_content"></textarea>
                 <button type="button" class="btn btn-success btn-publish" onclick="Post()">回复</button>
             </div>
