调整页面，ajax异步请求，完善错误弹框

--- a/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
+++ b/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
@@ -12,6 +12,9 @@ body{
     float: right;
     margin-bottom: 15px;
 }
+.question-title{
+    margin-top: 25px;
+}
 .media-object{
     width: 38px;
     height: 38px;
@@ -28,6 +31,8 @@ body{
     color: #999;
     font-size: 13px;
     margin-bottom: 15px;
+    cursor: pointer;
+    margin-left: 10px;
 }
 .jumbotron{
     margin: 50px;
@@ -38,7 +43,7 @@ body{
 .comment{
     margin: 10px 0 15px 0;
 }
-.comment_content{
+.hrsp{
     margin-top: 0;
 }
 .menu{
@@ -53,9 +58,13 @@ body{
     color: #499ef3;
 }
 .review{
-    margin-left: 15px;
+    margin-left: 10px;
 }
 .comments{
     margin-bottom: 15px;
     border-bottom: 1px solid #999999;
+}
+.commit-content{
+    margin-left: 15px;
+    margin-bottom: -5px;
 }
