个人问题列表编辑功能完成，调整了样式

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,10 +25,15 @@
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.title}"></h4>
                     <span th:text="${question.description}"></span><br>
-                    <span class="desc-text"><span th:text="${question.commentCount}"></span>个回复 ·
+                    <span class="desc-text">
+                        <span th:text="${question.commentCount}"></span>个回复 ·
                             <span th:text="${question.viewCount}"></span>次浏览 ·
                             <span th:text="${question.followCount}"></span>个关注 ·
-                            <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span>
+                            <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span> ·
+                        <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                           th:if="${session.user != null && session.user.id == question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
                         </span>
                 </div>
             </div>
