--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -34,21 +34,23 @@
                            placeholder="输入标签,以英文逗号分隔" onclick="show()">
                     <div id="selectTag" class="publish-tag">
                         <ul class="nav nav-tabs" role="tablist">
-                            <li role="presentation" th:each="selectCategory : ${tags}">
+                            <li role="presentation" th:each="selectCategory,selectCategoryStat: ${tags}"
+                                th:class="${selectCategoryStat.first ? 'active':''}">
                                 <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab"
                                    data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
                             </li>
                         </ul>
                         <div class="tab-content">
                             <div role="tabpanel" th:id="${selectCategory.categoryName}"
-                                 th:each="selectCategory: ${tags}">
+                                 th:each="selectCategory: ${tags}"
+                                 th:class="${selectCategoryStat.first ? 'active tab-pane':'tab-pane'}">
                                 <span>
                                     <span th:each="selectTag: ${selectCategory.tags}">
-                                        <span class="community-tag" onclick="selectTag(this)"
+                                    <span class="community-tag" onclick="selectTag(this)"
                                           th:data-tag="${selectTag}"
                                           th:text="${' '+selectTag}">
-                                        </span>
                                     </span>
+                                </span>
                                 </span>
                             </div>
                         </div>
