--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -27,7 +27,6 @@
                         <h4 class="media-heading">
                             <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
                         </h4>
-                        <span th:text="${question.description}"></span><br>
                         <span class="desc-text">
                         <span th:text="${question.commentCount}"></span>个回复 ·
                             <span th:text="${question.viewCount}"></span>次浏览 ·
@@ -87,7 +86,7 @@
             <div class="list-group section">
                 <a href="/profile/questions"  th:class="${section == 'questions'}?'list-group-item active' : 'list-group-item'">我的提问</a>
                 <a href="/profile/replies" th:class="${section == 'replies'}?'list-group-item active' : 'list-group-item'">最新回复
-                    <span class="badge" th:text="${unreadCount}"></span>
+                    <span class="badge" th:text="${session.unreadCount}"></span>
                 </a>
             </div>
         </div>
