新增上传图片的功能

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -40,7 +40,10 @@
                             path: "/bootstrap-3.3.7-dist/js/lib/",
                             delay: 0,
                             watch : false,
-                            placeholder : "请输入问题描述..."
+                            placeholder : "请输入问题描述...",
+                            imageUpload : true,
+                            imageFormats : ["jpg","jpeg","gif","png","bmp","webp"],
+                            imageUploadURL : "/file/upload"
                         });
                     });
                 </script>
