--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -56,7 +56,7 @@
                 <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pagination.hasFirstPage}">
-                        <a th:href="@{''+${section}(page=${1})}" aria-label="to_First_Page">
+                        <a th:href="@{${section}(page=${1})}" aria-label="to_First_Page">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
