--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,9 +11,10 @@
 <body>
 <div th:insert="~{navigation :: nav}"></div>
 <div class="jumbotron">
-    <h1>页面出错了...</h1>
+    <h1>服务器被吃掉了，页面出错了...</h1>
     <p th:text="${message}"></p>
     <p><a class="btn btn-primary btn-lg" href="/" role="button">回到论坛首页</a></p>
 </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
