--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,9 +72,14 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
+            <!--微信号-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h5>关注克莱的箱子,欢迎访问github博客</h5>
+                <img class="img-thumbnail" src="" style="width: 100%">
+            </div>
         </div>
     </div>
 </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
