热门话题功能实现

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -17,7 +17,7 @@
 
                 <form class="navbar-form navbar-left" action="/" method="get">
                     <div class="form-group">
-                        <input type="text" class="form-control" name="search" placeholder="今天有哪些问题？">
+                        <input type="text" class="form-control" name="search" placeholder="今天有哪些问题？" autocomplete="">
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
