--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,6 +77,16 @@
                 <h5>关注克莱的箱子,欢迎访问github博客(下方为施工区域)</h5>
                 <img class="img-thumbnail" src="" style="width: 100%">
             </div>
+            <!--热门话题列表-->
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>热门话题</h4>
+                <ul class="question-related">
+                    <li th:each="tag : ${hotTags}">
+                        <a th:href="@{/(page=1,search=${search},tag=${tag})}" th:text="${tag}"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
