完善优化了部分代码

--- a/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
+++ b/src/main/resources/static/bootstrap-3.3.7-dist/css/community.css
@@ -77,6 +77,10 @@ body {
 .media-body {
     padding-top: 10px;
 }
+.badgestatus{
+    margin-left: 5px;
+    margin-top: -2px;
+}
 
 .comment {
     margin: 10px 0 15px 0;
