--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -142,11 +142,9 @@
                 </div>
             </div>
 
-            <!--微信号-->
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h5>关注克莱的箱子,欢迎访问github博客</h5>
-                <img class="img-thumbnail" src="" style="width: 100%">
+                <div th:insert="~{side :: side}"></div>
             </div>
 
             <!--相关问题列表-->
