--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,11 +72,7 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <!--微信号-->
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h5>关注克莱的箱子,欢迎访问github博客(下方为施工区域)</h5>
-                <img class="img-thumbnail" src="" style="width: 100%">
-            </div>
+            <div th:insert="~{side :: side}"></div>
             <!--热门话题列表-->
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
